<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="title_home">"Home"</string>
<string name="action_remove">"Remove"</string>
<string name="home_menu_medicines">"MEDICINES"</string>
<string name="medicine">"medicine"</string>
<string name="drawer_help_option">"Tour"</string>
<string name="drawer_settings_option">"Settings"</string>
<string name="drawer_about_option">"About"</string>
<string name="title_activity_routines">"Routines"</string>
<string name="title_edit_routine_activity">"Edit routine"</string>
<string name="title_create_routine_activity">"Create routine"</string>
...
<string name="every_day">"Every day"</string>
<string name="once_a_day">"Once a day"</string>
<string name="twice_a_day">"Twice a day"</string>
<string name="tree_times_a_day">"Three times a day"</string>
<string name="four_times_a_day">"Four times a day"</string>
<string name="times_a_day">"times a day"</string>
<string name="and">"and"</string>
<string name="routine_breakfast">"Breakfast"</string>
<string name="routine_lunch">"Lunch"</string>
<string name="routine_dinner">"Dinner"</string>
<string name="day_monday_short">"Mon"</string>
<string name="day_tuesday_short">"Tue"</string>
<string name="day_wednesday_short">"Wed"</string>
<string name="day_thursday_short">"Thu"</string>
<string name="day_friday_short">"Fri"</string>
<string name="day_saturday_short">"Sat"</string>
<string name="day_sunday_short">"Sun"</string>
<string name="schedule_day_selector_mo">"MO"</string>
<string name="schedule_day_selector_tu">"TU"</string>
<string name="schedule_day_selector_we">"WE"</string>
<string name="schedule_day_selector_th">"TH"</string>
<string name="schedule_day_selector_fr">"FR"</string>
<string name="schedule_day_selector_sa">"SA"</string>
<string name="schedule_day_selector_su">"SU"</string>
<string name="agenda_zoom_meds_time">"It's time to take some meds!"</string>
<string name="home_no_pending_meds_message">"There are no pending meds for today"</string>
<string name="medicine_created_message">"Med created!"</string>
<string name="medicine_deleted_message">"Med deleted!"</string>
<string name="medicine_edited_message">"Med updated!"</string>
...
