...
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:padding="5dp"
                android:contentDescription="@string/reminder"
                android:src="@null"
                android:visibility="visible" />

            <Button
                android:id="@+id/get_info_button"
                style="@style/Widget.AppCompat.Button.Borderless"
...
